# MiniLog

./: .gitignore  CMakeLists.txt  README.md
MiniLog/: MiniLog.cpp  MiniLog.hpp
proj/vs2015/: MiniLog.sln  MiniLog.vcxproj  MiniLog.vcxproj.filters
proj/xcode/MiniLog.xcodeproj/: project.pbxproj
proj/xcode/MiniLog.xcodeproj/project.xcworkspace/xcuserdata/iHuahua.xcuserdatad/: UserInterfaceState.xcuserstate
proj/xcode/MiniLog.xcodeproj/xcuserdata/iHuahua.xcuserdatad/xcschemes/: MiniLog.xcscheme  xcschememanagement.plist
sample/: main.cpp
